--- a/index.html
+++ b/index.html
@@ -2,16 +2,113 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>cv</title>
+    <link rel="icon" href="./Images/link.png">
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Website</h1>
-    </main>
-    <script src="index.js"></script>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+      </head>
+    
+      <body>
+        <header class="header">
+          <div class="container header-container">
+            <nav class="nav">
+              <ul class="nav-list">          
+                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>          
+                <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+              </ul>
+            </nav>
+            <div class="toggle">
+              <div class="line1"></div>
+              <div class="line2"></div>
+              <div class="line3"></div>
+            </div>
+          </div>
+        </header>
+        <main class="main">
+          <div class="container main-container">
+            <section class="section section-profile" id="profile">
+              <img src="./Images/image.png" width="320" height="240" alt="avatar" class="section-profile-logo">
+              <div class="section-profile-title">
+                <h1 class="section-title main-title">Igor Safronov</h1>
+                              </div>        
+            </section>
+            <section class="section" id="contacts">
+              <h2 class="section-title">Contacts</h2>
+              <ul class="section-list">
+                <li class="section-item contacts-item">
+                  Irkutsk, Russia
+                </li>
+                <li class="section-item contacts-item">
+                  Email: <a href="https://mail.google.com/mail/u/0/#inbox" title="email">vishnyakov665@gmail.com</a>
+                </li>
+                <li class="section-item contacts-item">
+                  Github: <a href="https://github.com/Amod520" title="github">Amod520</a>
+                </li>
+                <li class="section-item contacts-item">
+                  Telegram: <a href="https://t.me/I_Safr" title="github">@I_Safr</a>
+                </li>
+                <li class="section-item contacts-item">
+                  Discord: <a href="https://discord.com" title="github">Amod#3118</a>
+                </li>
+              </ul>
+            </section>
+            <section class="section" id="summary">
+              <h2 class="section-title">Summary</h2>
+              <p>
+                I want to get to test myself in studying in a new industry for me. Until that day, only Pascal *(at school)* knew about programming.
+I am working at a furniture factory as a process engineer, which I also unlearned on my own, by trial and error. Self-knowledge and self-improvement is the truth "knocked out" in my head, that I carry with me all my life.
+              </p>
+            </section>
+            <section class="section" id="skills">
+              <h2 class="section-title">Skills</h2>
+              <ul class="section-list">
+                <li class="section-item">
+                  Skills in this industry are zero :)
+                </li>
+               </ul>
+            </section>
+            <section class="section" id="code">
+              <h2 class="section-title">Code</h2>
+      <pre class="pre"><code>```c++
+        int multiply(int a, int b)
+        {return a * b;}; ```
+      </code></pre>
+            </section>
+            <section class="section" id="courses">
+              <h2 class="section-title">Courses</h2>
+              <ul class="section-list">
+                <li class="section-item">
+                  I have not </li>
+              </ul>
+            </section>
+            <section class="section" id="projects">
+              <h2 class="section-title">Projects</h2>
+              <ul class="section-list">
+                <li class="section-item">
+                  <a href="https://github.com/Amod520/rsschool-cv/blob/a7e5738331e714d75a311763d3c1e0caecda88d5/cv.md#L19">CV</a>
+                </li>          
+                 </ul>
+            </section>
+            <section class="section section-education" id="education">
+              <h2 class="section-title">Education</h2>
+              <p>Incomplete higher education (Baikal State University)</p>
+            </section>
+            <section class="section section-english" id="english">
+              <h2 class="section-title">English</h2>
+              <p>B1</p>
+            </section>
+          </div>
+        </main>
+        <footer class="footer">
+          <div class="container footer-container">
+            <div>© 2022 <a href="https://github.com/Amod520" class="github nav-link">Amod520</a> </div>
+            <a href="https://rs.school/js/" class="rss"></a>
+          </div>
+        </footer>
+      </body>
 </html>
